--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-alpha.2/css/materialize.min.css">
   <script src="https://cdn.jsdelivr.net/npm/vue"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-alpha.2/js/materialize.min.js"></script>
@@ -12,13 +11,7 @@
   <div id="app">
     <nav class="blue darken-2">
       <div class="nav-wrapper container">
-        <a href="#!" class="brand-logo"><i class="material-icons">fitness_center</i>Habits</a>
-        <ul class="right hide-on-med-and-down">
-          <li><a href="#"><i class="material-icons">search</i></a></li>
-          <li><a href="#"><i class="material-icons">view_module</i></a></li>
-          <li><a href="#"><i class="material-icons">refresh</i></a></li>
-          <li><a href="#"><i class="material-icons">more_vert</i></a></li>
-        </ul>
+        <div href="#!" class="brand-logo center-align"><i class="material-icons">fitness_center</i>Habits</div>
       </div>
     </nav>
     <div v-if="modal.type === 'ADD_WORKOUT'">
